# websubsub

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: gemini-dispatch.yml  gemini-review.yml
tests/: base.py  requirements.txt  test_event_callback.py  test_refresh_subscription.py  test_static_change_urlname_active.py  test_static_change_urlname_dormant.py  test_static_create.py  test_static_existing.py  test_subscribe_success.py  test_unsubscribe_success.py  test_verify_malformed.py  test_verify_subscribe_success.py  test_verify_success.py  test_verify_unsubscribe_success.py
tests/djangoproject/: celery.py  settings.py  tasks.py  urls.py
websubsub/: admin.py  apps.py  lock.py  models.py  tasks.py  views.py
websubsub/management/commands/: websub_handle_url_changes.py  websub_purge_all.py  websub_purge_unresolvable.py  websub_reset_counters.py  websub_static_subscribe.py  websubscribe_static.py
websubsub/migrations/: 0001_initial.py  0002_auto_20180412_2035.py  0003_subscription_uuid.py  0004_populate_uuid.py  0005_uuid_nonnull.py  0006_auto_20200215_0012.py  0007_auto_20200215_0013.py  0008_subscription_time_created.py  0009_auto_20200215_1654.py  0010_subscription_time_last_event_received.py  0011_subscription_static.py  0012_auto_20200221_1827.py
websubsub/tasks/: __init__.py  refresh_subscriptions.py  retry_failed.py  save.py  subscribe.py  unsubscribe.py
